[package]
name = "benchsuite"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmarking suite for Cargo."
publish = false

[dependencies]
anyhow.workspace = true
cargo.workspace = true
cargo-util.workspace = true
criterion.workspace = true
flate2.workspace = true
rand.workspace = true
tar.workspace = true
url.workspace = true

[lib]
bench = false

[[bench]]
name = "resolve"
harness = false

[[bench]]
name = "workspace_initialization"
harness = false

[[bench]]
name = "global_cache_tracker"
harness = false

[[bench]]
name = "local_poll_adapter"
harness = false

[[bench]]
name = "resolve_core"
harness = false

[lints]
workspace = true
